; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_audiotoolboxdec.c_ffat_get_format_id.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_audiotoolboxdec.c_ffat_get_format_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kAudioFormatMPEG4AAC = common dso_local global i32 0, align 4
@kAudioFormatAC3 = common dso_local global i32 0, align 4
@kAudioFormatAppleIMA4 = common dso_local global i32 0, align 4
@kAudioFormatAppleLossless = common dso_local global i32 0, align 4
@kAudioFormatAMR = common dso_local global i32 0, align 4
@kAudioFormatEnhancedAC3 = common dso_local global i32 0, align 4
@kAudioFormatMicrosoftGSM = common dso_local global i32 0, align 4
@kAudioFormatiLBC = common dso_local global i32 0, align 4
@kAudioFormatMPEGLayer1 = common dso_local global i32 0, align 4
@kAudioFormatMPEGLayer2 = common dso_local global i32 0, align 4
@kAudioFormatMPEGLayer3 = common dso_local global i32 0, align 4
@kAudioFormatALaw = common dso_local global i32 0, align 4
@kAudioFormatULaw = common dso_local global i32 0, align 4
@kAudioFormatQDesign = common dso_local global i32 0, align 4
@kAudioFormatQDesign2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Invalid codec ID!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @ffat_get_format_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ffat_get_format_id(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %37 [
    i32 142, label %7
    i32 141, label %9
    i32 140, label %11
    i32 139, label %13
    i32 138, label %15
    i32 137, label %17
    i32 136, label %19
    i32 135, label %21
    i32 134, label %23
    i32 133, label %25
    i32 132, label %27
    i32 131, label %29
    i32 130, label %31
    i32 128, label %33
    i32 129, label %35
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @kAudioFormatMPEG4AAC, align 4
  store i32 %8, i32* %3, align 4
  br label %39

9:                                                ; preds = %2
  %10 = load i32, i32* @kAudioFormatAC3, align 4
  store i32 %10, i32* %3, align 4
  br label %39

11:                                               ; preds = %2
  %12 = load i32, i32* @kAudioFormatAppleIMA4, align 4
  store i32 %12, i32* %3, align 4
  br label %39

13:                                               ; preds = %2
  %14 = load i32, i32* @kAudioFormatAppleLossless, align 4
  store i32 %14, i32* %3, align 4
  br label %39

15:                                               ; preds = %2
  %16 = load i32, i32* @kAudioFormatAMR, align 4
  store i32 %16, i32* %3, align 4
  br label %39

17:                                               ; preds = %2
  %18 = load i32, i32* @kAudioFormatEnhancedAC3, align 4
  store i32 %18, i32* %3, align 4
  br label %39

19:                                               ; preds = %2
  %20 = load i32, i32* @kAudioFormatMicrosoftGSM, align 4
  store i32 %20, i32* %3, align 4
  br label %39

21:                                               ; preds = %2
  %22 = load i32, i32* @kAudioFormatiLBC, align 4
  store i32 %22, i32* %3, align 4
  br label %39

23:                                               ; preds = %2
  %24 = load i32, i32* @kAudioFormatMPEGLayer1, align 4
  store i32 %24, i32* %3, align 4
  br label %39

25:                                               ; preds = %2
  %26 = load i32, i32* @kAudioFormatMPEGLayer2, align 4
  store i32 %26, i32* %3, align 4
  br label %39

27:                                               ; preds = %2
  %28 = load i32, i32* @kAudioFormatMPEGLayer3, align 4
  store i32 %28, i32* %3, align 4
  br label %39

29:                                               ; preds = %2
  %30 = load i32, i32* @kAudioFormatALaw, align 4
  store i32 %30, i32* %3, align 4
  br label %39

31:                                               ; preds = %2
  %32 = load i32, i32* @kAudioFormatULaw, align 4
  store i32 %32, i32* %3, align 4
  br label %39

33:                                               ; preds = %2
  %34 = load i32, i32* @kAudioFormatQDesign, align 4
  store i32 %34, i32* %3, align 4
  br label %39

35:                                               ; preds = %2
  %36 = load i32, i32* @kAudioFormatQDesign2, align 4
  store i32 %36, i32* %3, align 4
  br label %39

37:                                               ; preds = %2
  %38 = call i32 @av_assert0(i32 0)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %37, %35, %33, %31, %29, %27, %25, %23, %21, %19, %17, %15, %13, %11, %9, %7
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @av_assert0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
